# xmr-btc-swap

./: .dockerignore  .dprintrc.json  .gitignore  .gitmodules  .mergify.yml  .taurignore  AGENT.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  bors.toml  dprint.json  index.html  justfile  package.json  rust-toolchain  rust-toolchain.toml  rustfmt.toml  vite.config.ts
bitcoin-harness/: Cargo.toml
bitcoin-harness/src/: bitcoind_rpc.rs  bitcoind_rpc_api.rs  lib.rs  wallet.rs
eigensync/: Cargo.toml
eigensync/src/: lib.rs  metrics.rs  protocol.rs  types.rs
electrum-pool/: Cargo.toml
electrum-pool/src/: lib.rs
libp2p-community-tor/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
libp2p-community-tor/examples/: ping-onion.rs
libp2p-community-tor/src/: lib.rs
libp2p-tor/: Cargo.toml  README.md  build.rs  tor.Dockerfile
libp2p-tor/examples/: dialer.rs  listener.rs  ping-onion.rs
libp2p-tor/src/: address.rs  dial_only.rs  duplex.rs  fmt_as_tor_compatible_address.rs  lib.rs  provider.rs  torut_ext.rs
libp2p-tor/tests/: integration_test.rs
migrate/: Cargo.toml  sqlx-data.json
migrate/src/: main.rs
monero-adaptor/: Cargo.toml  build.rs
monero-adaptor/src/: alice.rs  bob.rs  clsag.rs  commitment.rs  dleq_proof.rs  lib.rs  macros.rs  messages.rs  ring.rs
monero-adaptor/tests/: integration_test.rs  protocol.rs
monero-harness/: Cargo.toml  LICENSE  rustfmt.toml
monero-harness/src/: image.rs  lib.rs  rpc.rs
monero-harness/tests/: client.rs  monerod.rs  wallet.rs
monero-rpc/: Cargo.toml  README.md
monero-rpc-pool/: Cargo.toml
monero-rpc-pool/.sqlx/: query-03e5b2bccf8bffb962a56443448311800bb832efe37fe6c52181bd7bf631740c.json  query-08d143b977a7fa23b289c22dee3cab4d64debeea9932c58047cc6244d136f80d.json  query-0aa34e769813a40e0518f5311ff95685fd5278103d13f56795ff5a51b0ef8036.json  query-132666c849bf0db14e50ef41f429e17b7c1afd21031edf3af40fadfb79ef2597.json  query-2a378cb109fe284ba3a939aed1bcb50dc694c89ef1eb08bf3d62e7d9e0902a4e.json  query-37157927724c8bc647bf4f76f5698631cbd40637778dfa83e8f644ae6a7cf75b.json  query-3870c77c7c5fbb9bdd57c365765178a08de20e442a07f3e734e61c410e4f338e.json  query-3e8f39a6ec4443cec6497672891d12bbf7c1d0aca061827740af88ced863ae23.json  query-44ddff5bdf5b56e9c1a9848641181de4441c8974b2d1304804874cf620420ad4.json  query-549f5ef13ec7bf5d987dcb893753a9c903edcafa3a66bd82965b40a9e7f238b6.json  query-56549d93f0e2106297b85565a52b2d9ac64d5b50fb7aa6028be3fcf266fc1d5d.json  query-5736de2aac47eb69d7f6835d266aa28732b02a5e8e055ffaebcb452ed1b5044c.json  query-5798d9589772742f074e0ecc2551a40d943bfb7ed2e295f09f12d77cb65ce821.json  query-5a25c95c04b11a60a04ad97b5fb684e9a0cc2eb5daf64f33e924f0c38a2edfec.json  query-5ff27bdd9b6e7aadc8dd4936e0ee7e6a611aaef28697a0e9535dfb30d1c4861d.json  query-75ad770e6f70443871f919c26c189aaefc306e2a72b456fc2d03d4aa870e150b.json  query-7bc8d637e7cf020bff58d05109ae88e56672e95e0e638af99e82df5b00595e77.json  query-9047f0683f1cf956e9b367b4e85d61fe0ca4b4f7a6ae5986025601b2000565d9.json  query-9f6d042ab61e1d3d652d85c7d77d86a847c4a25d4ee0eab57380d10b94d2686d.json  query-a032eb9773d4553aeaff4fb15ed99dbaef7d16d48750ee7bd4ab83233a9a732b.json  query-b6d85d42bf72888afa22e27710e8cfe3885ed226ae6ae02d6585c1f2f4140d68.json  query-b96b866cfc801e275e39e788993d26f6dba1a17a0dee265333c4ae5817ff1e55.json  query-ba231efaf208a42fa857f716ef296b428c937f2eb7c8ce9c631f7f721e914c14.json  query-d32d91ca2debc4212841282533482b2ff081234c7f9f848a7223ae04234995d9.json  query-e0865335c2dcb040a34e3f1305fe1a823d6fcde4a061def602cba30971817781.json  query-fac12e3ca6ac1db1a4812a5390a333ec95a2e5e2cd554c169ceecc61b7ff2864.json  query-ffa1b76d20c86d6bea02bd03e5e7de159adbb7c7c0ef585ce4df9ec648bea7f8.json
monero-rpc-pool/migrations/: 20250618212026_initial_schema.sql  20250618212059_insert_default_nodes.sql  20250624073414_remove_redundant_full_url_from_node_table.sql  20250624073558_default_nodes_remove_ssl_where_not_supported.sql  20250628093515_add_default_nodes_from_feather.sql
monero-rpc-pool/src/: config.rs  database.rs  discovery.rs  lib.rs  main.rs  pool.rs  proxy.rs  simple_handlers.rs  types.rs
monero-rpc/src/: lib.rs  monerod.rs  rpc.rs  wallet.rs
monero-sys/: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  regenerate_sqlx_cache.sh
monero-sys/.sqlx/: query-7e58428584d28a238ab37a83662b88afcef6fc5246f11c85a35869f79da61c34.json  query-a679f789c90ede34cd840d23d90087520dcf1777fdf4cc3ed7aab0c9d70d060c.json
monero-sys/migrations/: 20250710170522_create_recent_wallets.sql
monero-sys/patches/: 0002-store-crash-fix.patch  wallet2_api_allow_subtract_from_fee.patch
monero-sys/src/: bridge.h  bridge.rs  database.rs  lib.rs
monero-sys/tests/: sign_message.rs  simple.rs  special_paths.rs  wallet_closing.rs
monero-wallet/: Cargo.toml
monero-wallet/src/: lib.rs  v2.rs
monero-wallet/tests/: integration_test.rs
seed/: Cargo.toml
seed/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-xmr-btc-swap/src-tauri/: Cargo.toml  tauri.conf.json
swap/: .gitignore  Cargo.toml  README.md  build.rs  concurrent_bobs_before_xmr_lock_proof_sent.txt  sqlite_dev_setup.sh  sqlx-data.json  tempdb
swap-env/: Cargo.toml
swap-env/src/: config.rs  env.rs  lib.rs
swap-feed/: Cargo.toml
swap-feed/src/: lib.rs  rate.rs  traits.rs
swap-serde/: Cargo.toml
swap-serde/src/: bitcoin.rs  electrum.rs  lib.rs  libp2p.rs  monero.rs
swap/.sqlx/: query-081c729a0f1ad6e4ff3e13d6702c946bc4d37d50f40670b4f51d2efcce595aa6.json  query-0ab84c094964968e96a3f2bf590d9ae92227d057386921e0e57165b887de3c75.json  query-0d465a17ebbb5761421def759c73cad023c30705d5b41a1399ef79d8d2571d7c.json  query-1f332be08a5426f3fbcadea4e755d82ff1cdc2690eb464ccc607d3a613fa76a1.json  query-2a356078a41b321234adf2aa385b501749f907f7c422945a8bdda2b6274f5225.json  query-50a5764546f69c118fa0b64120da50f51073d36257d49768de99ff863e3511e0.json  (+13 more)
swap/src/: alice.rs  api.rs  asb.rs  bob.rs  (+38 more)
tokio-tar/: Cargo.toml  README.md
xmr-btc/: Cargo.toml
(+874 files in other folders)
