[package]
name = "bitcoin-harness"
version = "0.1.0"
authors = ["CoBloX Team <team@coblox.tech>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
base64 = "0.12.3"
bitcoin = { version = "0.23", features = ["use-serde"] }
bitcoincore-rpc-json = "0.12" # note: uses bitcoin 0.25 under the hood!
futures = "0.3.5"
hex = "0.4.2"
jsonrpc_client = { git = "https://github.com/thomaseizinger/rust-jsonrpc-client", rev = "c7010817e0f86ab24b3dc10d6bb0463faa0aace4", features = ["reqwest"] }
reqwest = { version = "0.10", default-features = false, features = ["json", "native-tls"] }
serde = "1.0"
serde_json = "1.0"
testcontainers = "0.11"
thiserror = "1.0"
tokio = { version = "0.2", default-features = false, features = ["blocking", "macros", "rt-core", "time"] }
tracing = "0.1"
url = "2"

[features]
default = []
test-docker = []
