[package]
name = "eigensync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "eigensync-server"
path = "src/bin/server.rs"
required-features = ["server"]

[features]
default = ["client"]
server = ["dep:clap", "dep:toml", "dep:tracing-subscriber"]
client = []
metrics = ["dep:opentelemetry", "dep:opentelemetry-prometheus", "dep:prometheus"]

[dependencies]
# Core dependencies
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "fs", "signal"] }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

# Automerge
automerge = "0.5"

# Networking
libp2p = { workspace = true, features = ["request-response", "tcp", "noise", "yamux", "identify", "ping", "mdns"] }
futures = { workspace = true }

# Database
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
rusqlite_migration = "1.2"

# Serialization
serde_cbor = "0.11"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3", features = ["serde", "formatting"] }

# Server-only dependencies
clap = { version = "4.0", features = ["derive"], optional = true }
toml = { version = "0.8", optional = true }
tracing-subscriber = { workspace = true, optional = true }

# Metrics (optional)
opentelemetry = { version = "0.23", optional = true }
opentelemetry-prometheus = { version = "0.16", optional = true }
prometheus = { version = "0.13", optional = true }

[dev-dependencies]
tempfile = "3.0"

[lints]
workspace = true
