[package]
name = "migrate"
version = "0.1.0"
authors = [ "The COMIT guys <hello@comit.network>" ]
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1" }
serde_json = "1"
sqlx = { version = "0.6.3", features = [ "sqlite", "runtime-tokio-rustls", "offline" ] }
structopt = "0.3"
tokio = { version = "1", features = ["rt", "macros"] }
