[package]
name = "monero-adaptor"
version = "0.1.0"
authors = ["CoBloX Team <team@coblox.tech>"]
edition = "2018"

[dependencies]
monero = "0.11"
anyhow = "1"
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "sync", "process", "fs"] }
curve25519-dalek = "3"
rand = "0.7"
nazgul = "0.1"
tiny-keccak = "2"

[build-dependencies]
bindgen = "0.58"
cc = "1"
