[package]
name = "monero-harness"
version = "0.1.0"
authors = ["CoBloX Team <team@coblox.tech>"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
futures = "0.3"
monero = "0.12"
monero-rpc = { path = "../monero-rpc" }
monero-sys = { path = "../monero-sys" }
rand = "0.7"
reqwest = "0.12.15"
testcontainers = "0.15"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "time", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
