[package]
name = "monero-harness"
version = "0.1.0"
authors = ["CoBloX Team <team@coblox.tech>"]
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
monero = { workspace = true }
monero-rpc = { path = "../monero-rpc" }
monero-sys = { path = "../monero-sys" }
rand = { workspace = true }
reqwest = { workspace = true }
testcontainers = "0.15"
tokio = { workspace = true, features = ["rt-multi-thread", "time", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }
