[package]
name = "monero-rpc-pool"
version = "0.1.0"
authors = ["UnstoppableSwap Team <help@unstoppableswap.net>"]
edition = "2021"

[[bin]]
name = "monero-rpc-pool"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
monero = { version = "0.12", features = ["serde_support"] }
monero-rpc = { path = "../monero-rpc" }
rand = "0.8"
regex = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typeshare = "1.0.3"
url = "2.0"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
