[package]
name = "monero-rpc-pool"
version = "0.1.0"
authors = ["UnstoppableSwap Team <help@unstoppableswap.net>"]
edition = "2021"

[[bin]]
name = "monero-rpc-pool"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
futures = { workspace = true }
monero = { workspace = true }
monero-rpc = { path = "../monero-rpc" }
rand = { workspace = true }
regex = "1.0"
reqwest = { workspace = true, features = ["rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }
tokio = { workspace = true, features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typeshare = { workspace = true }
url = "2.0"
uuid = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
