[package]
name = "monero-rpc"
version = "0.1.0"
authors = ["CoBloX Team <team@coblox.tech>"]
edition = "2021"

[dependencies]
anyhow = { workspace = true }
curve25519-dalek = "3.1"
hex = "0.4"
jsonrpc_client = { version = "0.7", features = ["reqwest"] }
monero = { workspace = true }
monero-epee-bin-serde = "1"
rand = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
hex-literal = "0.4"
tokio = { workspace = true, features = ["full"] }
