[package]
name = "monero-sys"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
cxx = "1.0.137"
monero = { workspace = true }
serde = { workspace = true }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono"] }
swap-serde = { path = "../swap-serde" }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tracing = { workspace = true }
typeshare = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
cmake = "0.1.54"
cxx-build = "1.0.137"
diffy = "0.4.2"

[dev-dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
quickcheck = "1.0"
quickcheck_macros = "1.0"
tempfile = "3.19.1"
testcontainers = "0.15"
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
