[package]
name = "monero-wallet"
version = "0.1.0"
authors = [ "CoBloX Team <team@coblox.tech>" ]
edition = "2018"

[dependencies]
anyhow = "1"
monero = "0.12"
monero-rpc = { path = "../monero-rpc" }
rand = "0.7"
curve25519-dalek = "3"
async-trait = "0.1"
itertools = "0.10"
hash_edwards_to_edwards = { git = "https://github.com/comit-network/hash_edwards_to_edwards" }
hex = "0.4"

[dev-dependencies]
monero-harness = { path = "../monero-harness" }
rand = "0.7"
testcontainers = "0.12"
tokio = { version = "1", features = [ "rt-multi-thread", "time", "macros", "sync", "process", "fs" ] }
tracing-subscriber = { version = "0.2", default-features = false, features = [ "fmt", "ansi", "env-filter", "chrono", "tracing-log" ] }
