[package]
name = "unstoppableswap-gui-rs"
version = "1.0.0-rc.6"
authors = [ "binarybaron", "einliterflasche", "unstoppableswap" ]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "GUI for XMR<>BTC Atomic Swaps written in Rust"

[lib]
name = "unstoppableswap_gui_rs_lib"
crate-type = [ "lib", "cdylib", "staticlib" ]

[build-dependencies]
tauri-build = { version = "2.0", features = [ "config-json5" ] }

[dependencies]
anyhow = "1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
swap = { path = "../swap", features = [ "tauri" ] }
sysinfo = "=0.32.0"
tauri = { version = "2.0", features = [ "config-json5" ] }
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-store = "2.1.0"
tauri-plugin-updater = "2.0.2"
tracing = "0.1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2.0"
tauri-plugin-single-instance = "2.0.0-rc"
