[package]
name = "unstoppableswap-gui-rs"
version = "2.3.0-beta.1"
authors = [ "binarybaron", "einliterflasche", "unstoppableswap" ]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "GUI for XMR<>BTC Atomic Swaps written in Rust"

[lib]
name = "unstoppableswap_gui_rs_lib"
crate-type = [ "lib",  "staticlib" ]

[build-dependencies]
tauri-build = { version = "^2.0.0", features = [ "config-json5" ] }

[dependencies]
anyhow = "1"
monero-rpc-pool = { path = "../monero-rpc-pool" }
rustls = { version = "0.23.26", default-features = false, features = ["ring"] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
swap = { path = "../swap", features = [ "tauri" ] }
sysinfo = "=0.32.1"
tauri = { version = "^2.0.0", features = [ "config-json5" ] }
tauri-plugin-clipboard-manager = "^2.0.0"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-opener = "^2.0.0"
tauri-plugin-process = "^2.0.0"
tauri-plugin-shell = "^2.0.0"
tauri-plugin-store = "^2.0.0"
tauri-plugin-updater = "^2.0.0"
tracing = "0.1"
uuid = "1.16.0"
zip = "4.0.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "^2.0.0"
tauri-plugin-single-instance = "^2.0.0"
