[package]
name = "swap-env"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bitcoin = { workspace = true }
config = { version = "0.14", default-features = false, features = ["toml"] }
dialoguer = "0.11"
libp2p = { workspace = true, features = ["serde"] }
monero = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
swap-fs = { path = "../swap-fs" }
swap-serde = { path = "../swap-serde" }
thiserror = { workspace = true }
time = "0.3"
toml = "0.8"
tracing = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
