[package]
name = "swap-serde"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bitcoin = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true }
monero = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
