[package]
name = "swap"
version = "2.2.0-beta.2"
authors = ["The COMIT guys <hello@comit.network>"]
edition = "2021"
description = "XMR/BTC trustless atomic swaps."

[lib]
name = "swap"

[features]
tauri = ["dep:tauri"]

[dependencies]
anyhow = "1"
arti-client = { version = "0.25.0", features = ["static-sqlite", "tokio", "rustls"], default-features = false }
async-compression = { version = "0.3", features = ["bzip2", "tokio"] }
async-trait = "0.1"
asynchronous-codec = "0.7.0"
atty = "0.2"
backoff = { version = "0.4", features = ["tokio"] }
base64 = "0.22"
bdk = { version = "0.28" }
bdk_chain = { version = "0.20" }
bdk_electrum = { version = "0.19", default-features = false, features = ["use-rustls-ring"] }
bdk_wallet = { version = "1.0.0-beta.5", features = ["rusqlite", "test-utils"] }
big-bytes = "1"
bitcoin = { version = "0.32", features = ["rand", "serde"] }
bmrng = "0.5.2"
comfy-table = "7.1"
config = { version = "0.14", default-features = false, features = ["toml"] }
conquer-once = "0.4"
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4" }
data-encoding = "2.6"
derive_builder = "0.20.2"
dialoguer = "0.11"
directories-next = "2"
ecdsa_fun = { version = "0.10", default-features = false, features = ["libsecp_compat", "serde", "adaptor"] }
ed25519-dalek = "1"
futures = { version = "0.3", default-features = false, features = ["std"] }
hex = "0.4"
libp2p = { version = "0.53.2", features = ["tcp", "yamux", "dns", "noise", "request-response", "ping", "rendezvous", "identify", "macros", "cbor", "json", "tokio", "serde", "rsa"] }
libp2p-community-tor = { git = "https://github.com/umgefahren/libp2p-tor", branch = "main", features = ["listen-onion-service"] }
moka = { version = "0.12", features = ["sync", "future"] }
monero = { version = "0.12", features = ["serde_support"] }
monero-rpc = { path = "../monero-rpc" }
monero-rpc-pool = { path = "../monero-rpc-pool" }
monero-sys = { path = "../monero-sys" }
once_cell = "1.19"
pem = "3.0"
proptest = "1"
qrcode = "0.14"
rand = "0.8"
rand_chacha = "0.3"
regex = "1.10"
reqwest = { version = "0.12", features = ["http2", "rustls-tls-native-roots", "stream", "socks"], default-features = false }
rust_decimal = { version = "1", features = ["serde-float"] }
rust_decimal_macros = "1"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
serde_with = { version = "1", features = ["macros"] }
sha2 = "0.10"
sigma_fun = { version = "0.7", default-features = false, features = ["ed25519", "serde", "secp256k1", "alloc"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
structopt = "0.3"
strum = { version = "0.26", features = ["derive"] }
tauri = { version = "2.0", features = ["config-json5"], optional = true, default-features = false }
thiserror = "1"
time = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "sync", "process", "fs", "net", "parking_lot"] }
tokio-tungstenite = { version = "0.15", features = ["rustls-tls"] }
tokio-util = { version = "0.7", features = ["io", "codec"] }
toml = "0.8"
tor-rtcompat = { version = "0.25.0", features = ["tokio"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.3.4", features = ["full"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter", "time", "tracing-log", "json"] }
typeshare = "1.0.3"
unsigned-varint = { version = "0.8.0", features = ["codec", "asynchronous_codec"] }
url = { version = "2", features = ["serde"] }
uuid = { version = "1.9", features = ["serde", "v4"] }
void = "1"

[target.'cfg(not(windows))'.dependencies]
tokio-tar = "0.3"

[target.'cfg(windows)'.dependencies]
zip = "0.5"

[dev-dependencies]
bitcoin-harness = { git = "https://github.com/UnstoppableSwap/bitcoin-harness-rs", branch = "master" }
get-port = "3"
mockito = "1.4"
monero-harness = { path = "../monero-harness" }
proptest = "1"
serde_cbor = "0.11"
serial_test = "3.1"
tempfile = "3"
testcontainers = "0.15"

[build-dependencies]
anyhow = "1"
vergen = { version = "8.3", default-features = false, features = ["build", "git", "git2"] }
